src2/overlap-hipified/log_run_bench.err
main.cu:77:5: error: no matching function for call to 'hipHostAlloc'
   77 |     hipHostAlloc(&h_data_in[i], memsize, hipHostMallocDefault);
      |     ^~~~~~~~~~~~
/opt/rocm-6.2.0/include/hip/hip_runtime_api.h:3780:12: note: candidate function not viable: no known conversion from 'int **' to 'void **' for 1st argument
 3780 | hipError_t hipHostAlloc(void** ptr, size_t size, unsigned int flags);
      |            ^            ~~~~~~~~~~
main.cu:78:5: error: no matching function for call to 'hipHostAlloc'
   78 |     hipHostAlloc(&h_data_out[i], memsize, hipHostMallocDefault);
      |     ^~~~~~~~~~~~
/opt/rocm-6.2.0/include/hip/hip_runtime_api.h:3780:12: note: candidate function not viable: no known conversion from 'int **' to 'void **' for 1st argument
 3780 | hipError_t hipHostAlloc(void** ptr, size_t size, unsigned int flags);
      |            ^            ~~~~~~~~~~
2 errors generated when compiling for gfx90a.
failed to execute:/opt/rocm-6.2.0/lib/llvm/bin/clang++  --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a  -std=c++14 -Wall -O3 -c -x hip main.cu -o "main.o"
make: *** [Makefile.AMD:50: main.o] Error 1
